--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "rc-queue-anim": "^1.3.1",
     "react": "16",
     "react-dom": "16",
-    "recharts": "^1.0.0-beta.5"
+    "recharts": "^1.0.0-beta.5",
+    "shortid": "^2.2.8"
   },
   "devDependencies": {
     "babel-eslint": "^8.0.1",
